ec2 app_code ref file/main.tf
provider "aws" {
    region = "ap-south-1"
}

# variables

variable "vpc_cidr_block" {}
variable "subnet_cidr_block" {}
variable "avail_zone" {}
variable "env_prefix" {}
variable "my-ip" {}
variable "instance_type" {}
variable "local_public_key_location" {}

# create a vpc

resource "aws_vpc" "myapp-vpc" {
   cidr_block = var.vpc_cidr_block
   tags = {
    Name: "${var.env_prefix}-vpc"
   }
} 

# create a subnet

resource "aws_subnet" "myapp_subnet-1" {
  vpc_id = aws_vpc.myapp-vpc.id
  cidr_block = var.subnet_cidr_block
  availability_zone = var.avail_zone 
  tags = {
    Name = "${var.env_prefix}-subnet-1"
  }
}

# create a new route table

resource "aws_route_table" "myapp-route-table" {

# it will be created under the same VPC so we paste the same ID as in aws_subnet

    vpc_id = aws_vpc.myapp-vpc.id

# we're going to create a second entry in out route block which basically is internet gateway

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.myapp-igw.id
    }
    tags = {
      Name: "${var.env_prefix}-rtb"
    }
}

# in our vpc we dont have the resource for internet gateway, so we'll create it
resource "aws_internet_gateway" "myapp-igw" {
    vpc_id = aws_vpc.myapp-vpc.id  
    tags = {
      "Name" = "${var.env_prefix}-igw"
    }
}

resource "aws_route_table_association" "a-rtb-subnet" {
      subnet_id = aws_subnet.myapp_subnet-1.id
      route_table_id = aws_route_table.myapp-route-table.id
}

# if we want to use the default route table instead of creating a new one,
# for that we remove the (resource "aws_route_table_association") and
# (resource "aws_route_table"),
# and use the below defined resource. 

/*resource "aws_default_route_table" "main-rtb" {
    default_route_table_id = aws_vpc.myapp-vpc.default_route_table_id

    route {
        cidr_block = "0.0.0.0/16"
        gateway_id = aws_internet_gateway.myapp-igw.id
    }
    tags = {
      "Name" = "${var.env_prefix}-main-rtb"
    }
  
}*/

# next we will configure the firewall rules for our ec2 instance, so we can access to it using SSH on port 22
# as well as the nginx server on port 8080 

# to use the default security group, just modify the name by "aws_default_security_group" and "default-sg"
# remove the "name(key:pair)" in resource, because its default so we don't have to define it

resource "aws_security_group" "myapp-sg" {
    name = "myapp-sg"
    vpc_id = aws_vpc.myapp-vpc.id

# generally we have two types of rules, that being traffic coming inside the vpc and then entering the server
# and the incoming traffic use a rule called "INGRESS"

    ingress {
        from_port = 22
        to_port = 22              # here we are configuring a single port 22, but we can also set a range (from_port - to_port)
        protocol = "TCP"
        cidr_blocks = [var.my-ip]  # accessing a server on SSH should be secure, so we allow some IP addr permitted to do that
    }    

    ingress {
        from_port = 8080
        to_port = 8080
        protocol = "TCP"
        cidr_blocks = ["0.0.0.0/0"] 
    }

    egress {
        from_port = 0                     # we don't want to restrict any outgoing request
        to_port = 0                       # we don't want to restrict any outgoing request
        protocol = "-1"                   # we dont want to restrict the protocol  
        cidr_blocks = ["0.0.0.0/0"] 
        prefix_list_ids = []              # to allow accessing VPC endpoints
    } 

    tags = {
        Name = "${var.env_prefix}-sg"     # for default security group "${var.env_prefix}-default-sg"
    }   
}

# now we create an EC2 instance, first we declare the "data" then the "resource"

data "aws_ami" "latest-ami" {
    most_recent = true  
    owners = ["amazon"]
    filter {
        name = "name"
        values = ["amzn2-ami-hvm-*-x86_64-gp2"]
    }
    filter {
        name = "virtualization-type"
        values = ["hvm"]
    }
}

# we don't want to create a key manually everytime(such a drag), so we automate that by creating a resource

resource "aws_key_pair" "ssh-key" {
    key_name = "my-server-key"

# we can mention the key here but its not best practice, opt#2 to mention in a variable file,
# opt#3 reference the file location     

    public_key = "${file(var.local_public_key_location)}"  # we can use file(var.------location) without "${}" because this is not a string, so no interpolation 
}

resource "aws_instance" "myapp-server" {
    ami = data.aws_ami.latest-ami.id
    instance_type = var.instance_type
    
    subnet_id = aws_subnet.myapp_subnet-1.id
    vpc_security_group_ids = [aws_security_group.myapp-sg.id]
    availability_zone = var.avail_zone

    associate_public_ip_address = true
    key_name = aws_key_pair.ssh-key.key_name

# in line 3 of EOF we added a pait time till the pid is successfully processed
# pid=$id grabs the most recent process id and then wait=$pid makes the system wait unltil it is processed
  
# we created a file entry_script.sh and scripted the code defined below in it, instead of defining it here in the main.tf file
  
/*#!/bin/bash
sudo yum update -y && sudo yum install -y docker 
sudo systemctl start docker & pid=$! && wait=$pid
sudo usermod -aG docker ec2-user
sudo chmod 666 /var/run/docker.sock
docker run -p 8080:80 nginx*/  

    user_data = file("entry_script.sh")

    tags = {
        Name = "${var.env_prefix}-server"
    }
}

output "aws_ami_id" {
    value = data.aws_ami.latest-ami.id
}

output "ec2_public-ip" {
    value = aws_instance.myapp-server.public_ip
}
